[#6] Login UI만 구성

--- a/Android/app/src/main/AndroidManifest.xml
+++ b/Android/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.Memetory"
         tools:targetApi="31">
         <activity
+            android:name=".presentation.ui.auth.AuthActivity"
+            android:exported="false" />
+        <activity
             android:name=".presentation.ui.MainActivity"
             android:exported="false" />
         <activity
