--- a/iOS/Memetory/Memetory/Info.plist
+++ b/iOS/Memetory/Memetory/Info.plist
@@ -21,5 +21,9 @@
 			</array>
 		</dict>
 	</dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>BMJUA_otf.otf</string>
+	</array>
 </dict>
 </plist>
