--- a/backend/memetory/build.gradle
+++ b/backend/memetory/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 
     implementation 'com.auth0:java-jwt:4.2.1'
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 }
 
 tasks.named('test') {
