--- a/backend/memetory/src/main/resources/application.yml
+++ b/backend/memetory/src/main/resources/application.yml
@@ -1,4 +1,14 @@
 spring:
+  profiles:
+    group:
+      "local" : "local, jwt, oauth"
+    active : local # "local" 을 실행
+
+---
+spring:
+  config:
+    activate:
+      on-profile: "local"
   datasource:
     url: jdbc:mysql://localhost:3306/snowball
     username: root
