--- a/AI/roop/requirements.txt
+++ b/AI/roop/requirements.txt
@@ -1,28 +1,108 @@
---extra-index-url https://download.pytorch.org/whl/cu118
-
-numpy==1.24.3
-opencv-python==4.8.0.74
-onnx==1.14.0
-insightface==0.7.3
-psutil==5.9.5
-tk==0.1.0
+absl-py==2.1.0
+addict==2.4.0
+albumentations==1.3.1
+astunparse==1.6.3
+basicsr==1.4.2
+beautifulsoup4==4.12.3
+blinker==1.7.0
+cachetools==5.3.2
+certifi==2023.11.17
+charset-normalizer==3.3.2
+click==8.1.7
+coloredlogs==15.0.1
+contourpy==1.2.0
 customtkinter==5.2.0
-tkinterdnd2==0.3.0; sys_platform != 'darwin' and platform_machine != 'arm64'
-tkinterdnd2-universal==1.7.3; sys_platform == 'darwin' and platform_machine == 'arm64'
-pillow==10.0.0
-onnxruntime==1.15.1; python_version != '3.9' and sys_platform == 'darwin' and platform_machine != 'arm64'
-onnxruntime-coreml==1.13.1; python_version == '3.9' and sys_platform == 'darwin' and platform_machine != 'arm64'
-onnxruntime-silicon==1.13.1; sys_platform == 'darwin' and platform_machine == 'arm64'
-onnxruntime-gpu==1.15.1; sys_platform != 'darwin'
-tensorflow==2.13.0
-opennsfw2==0.10.2
-protobuf==4.23.4
-tqdm==4.65.0
-gfpgan==1.3.8
+cycler==0.12.1
+Cython==3.0.8
+darkdetect==0.8.0
+easydict==1.11
+facexlib==0.3.0
+filelock==3.13.1
+filterpy==1.4.5
 Flask==3.0.0
-
-onnxruntime~=1.16.3
-keras~=2.13.1
-Werkzeug~=3.0.1
-requests~=2.31.0
-PyYAML~=6.0.1
+flatbuffers==23.5.26
+fonttools==4.47.2
+fsspec==2023.12.2
+future==0.18.3
+gast==0.4.0
+gdown==5.0.1
+gfpgan==1.3.8
+google-auth==2.27.0
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+grpcio==1.60.0
+h5py==3.10.0
+humanfriendly==10.0
+idna==3.6
+imageio==2.33.1
+importlib-metadata==7.0.1
+insightface==0.7.3
+itsdangerous==2.1.2
+Jinja2==3.1.3
+joblib==1.3.2
+keras==2.13.1
+kiwisolver==1.4.5
+lazy_loader==0.3
+libclang==16.0.6
+llvmlite==0.41.1
+lmdb==1.4.1
+Markdown==3.5.2
+MarkupSafe==2.1.4
+matplotlib==3.8.2
+mpmath==1.3.0
+networkx==3.2.1
+numba==0.58.1
+numpy==1.24.3
+oauthlib==3.2.2
+onnx==1.14.0
+onnxruntime==1.16.3
+opencv-python==4.8.0.74
+opencv-python-headless==4.9.0.80
+opennsfw2==0.10.2
+opt-einsum==3.3.0
+packaging==23.2
+Pillow==10.0.0
+platformdirs==4.1.0
+prettytable==3.9.0
+protobuf==4.23.4
+psutil==5.9.5
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+pyparsing==3.1.1
+PySocks==1.7.1
+python-dateutil==2.8.2
+PyYAML==6.0.1
+qudida==0.0.4
+requests==2.31.0
+requests-oauthlib==1.3.1
+rsa==4.9
+scikit-image==0.22.0
+scikit-learn==1.4.0
+scipy==1.12.0
+six==1.16.0
+soupsieve==2.5
+style==1.1.0
+sympy==1.12
+tb-nightly==2.16.0a20240129
+tensorboard==2.13.0
+tensorboard-data-server==0.7.2
+tensorflow==2.13.0
+tensorflow-estimator==2.13.0
+tensorflow-macos==2.13.0
+termcolor==2.4.0
+tf_keras-nightly==2.16.0.dev2024012910
+threadpoolctl==3.2.0
+tifffile==2023.12.9
+tk==0.1.0
+tomli==2.0.1
+torch==2.1.2
+torchvision==0.16.2
+tqdm==4.65.0
+typing_extensions==4.5.0
+update==0.0.1
+urllib3==2.1.0
+wcwidth==0.2.13
+Werkzeug==3.0.1
+wrapt==1.16.0
+yapf==0.40.2
+zipp==3.17.0
