[#30] ModuleNotfoundError를 피하기 위해 app.py의 위치 변경

--- a/AI/roop/Dockerfile
+++ b/AI/roop/Dockerfile
@@ -4,6 +4,8 @@ ENV PYTHONUNBUFFERED 1
 WORKDIR /app
 COPY . ./
 
+VOLUME ./image:./roop/image
+
 RUN pip install --upgrade pip
 
 RUN apt-get update
