--- a/AI/roop/Dockerfile
+++ b/AI/roop/Dockerfile
@@ -4,13 +4,13 @@ ENV PYTHONUNBUFFERED 1
 WORKDIR /app
 COPY . ./
 
-VOLUME ./image:./roop/image
+VOLUME ./image:./image
 
 RUN pip install --upgrade pip
 
 RUN apt-get update
 RUN apt-get -y install ffmpeg
 
-RUN pip install -r ./roop/requirements.txt
+RUN pip install -r ./requirements.txt
 
-ENTRYPOINT ["top", "-b"]
+CMD ["python3", "app.py"]
