[#33] RDS 연결 및 배포용 설정파일 구현

--- a/backend/memetory/.gitignore
+++ b/backend/memetory/.gitignore
@@ -36,5 +36,4 @@ out/
 ### VS Code ###
 .vscode/
 
-src/main/resources/application-jwt.yml
-src/main/resources/application-oauth.yml
+src/main/resources/application-*
