--- a/backend/memetory/build.gradle
+++ b/backend/memetory/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.2.2'
     id 'io.spring.dependency-management' version '1.1.4'
+    id 'com.google.cloud.tools.jib' version '3.1.2'
 }
 
 group = 'com.example'
