--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -16,6 +16,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        with:
+          username: ${{ secrets.DOCKER_ID }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
       - name: Run scripts in server
         uses: appleboy/ssh-action@master
         with:
