--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -28,8 +28,7 @@ jobs:
       - name: Run scripts in server
         uses: appleboy/ssh-action@master
         with:
-          password: ${{ secrets.PASSWORD }}
+          key: ${{ secrets.PASSWORD }}
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER_NAME }}
-          port: ${{ secrets.PORT }}
           script: ${{ secrets.SCRIPT }}
