[#38] 배포용 application-dev 구현

--- a/backend/memetory/.gitignore
+++ b/backend/memetory/.gitignore
@@ -36,4 +36,5 @@ out/
 ### VS Code ###
 .vscode/
 
-src/main/resources/application-*
+src/main/resources/application-jwt.yml
+src/main/resources/application-oauth.yml
