--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -17,13 +17,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: 17
 
       - name: Log in to Docker Hub
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
           username: ${{ secrets.DOCKER_ID }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Execute Gradle build and analyze
+        run: ./backend/memetory/gradlew jib
 
       - name: Run scripts in server
         uses: appleboy/ssh-action@master
