--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -27,6 +27,8 @@ jobs:
         with:
           distribution: temurin
           java-version: 17
+      
+      - run : echo "${{secrets.DEV_YML}}" > ./src/main/resources/application-dev.yml
 
       - name: Log in to Docker Hub
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
