[#45] 배포용 이미지로 수정

--- a/backend/memetory/build.gradle
+++ b/backend/memetory/build.gradle
@@ -54,7 +54,7 @@ jib {
         }
     }
     to {
-        image = 'memetory/demo:latest'
+        image = 'junrain/memetory-server:latest'
     }
     container {
         jvmFlags = ['-Dspring.profiles.active=dev']
