--- a/backend/memetory/docker-compose.yml
+++ b/backend/memetory/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - app-tier
 
   memetory-server:
-    image: "memetory/demo"
+    image: "junrain/memetory-server"
     ports:
       - "80:8080"
     depends_on:
